Add Messages.properties for storing localized messages

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,2 +1,2 @@
-today.timetable = ?????????? ??????? ?? ???????: {0}{1}
-signed.up.for.training = ?? ???????? {0} ?? {1} 
+today.timetable = Расписание на сегодня: {0}{1}
+signed.up.for.training = Вы записаны {0}: {1}
