Extract messages from TextBuilder to Messages.properties

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1,2 +1,8 @@
 today.timetable = Расписание на сегодня: {0}{1}
-signed.up.for.training = Вы записаны {0}: {1}
+recorded.for.training = Вы записаны {0}: {1}
+recorded.for.trainings = Вы записаны:{0}{1}
+welcome = Привет {0}
+unsupported.command = Не знаю чем могу помочь. Выберете одно из доступных действий
+today = Сегодня
+tomorrow = Завтра
+removed.training.record = Удалена запись на тренировку {0}
